# g-test

./: CMakeLists.txt  bank_of_test.h  c_string_assertions.cc  death_test.cc  delegate_to_fake.cc  expect_call.cc  expect_call_invoke.cc  expect_call_matchers.cc  expect_call_order.cc  expect_call_return.cc  expect_call_side_effects.cc  expect_call_sticky_rules.cc  fib_test.cc  main.cpp  mock_non_virtual_classes.cc  mocking_free_function.cc  on_call.cc  private_members.cc  test_param.cc  test_param_share_logic.cc  test_share_logic.cc  unspecified.cc  use_the_arg_in_return_value.cc
lib/Google_test/googletest-main/docs/: primer.md
